--- a/scss/_variable_overrides.scss
+++ b/scss/_variable_overrides.scss
@@ -13,8 +13,18 @@ body {
     color: #D04F4F;
 }
 
-.last_displayed {
+// .last_displayed {
+//     z-index: 99;
+//     position: absolute;
+// }
+
+.lost_displayed {
     z-index: 99;
+    position: absolute;
+}
+.allfilters {
+    z-index: 99;
+    width: 100%;
     position: absolute;
 }
 
