--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,3 +1,8 @@
+$primary: #3282F7;
+$success: #68D9A4;
+$danger: #ED6454;
+
+
 @import "../node_modules/bootstrap/scss/bootstrap";
 @import "_variable_overrides";
 
