Correction html + extraction mainsearch cause jsbench

--- a/scss/_variable_overrides.scss
+++ b/scss/_variable_overrides.scss
@@ -148,6 +148,7 @@ input.mainsearch::placeholder {
 .tag {
     display: flex;
     flex-wrap: wrap;
+    gap: 10px;
 }
 .tag_filtre {
     border-radius: 5px;
