Message any recipe - logo - any console.log

--- a/scss/_variable_overrides.scss
+++ b/scss/_variable_overrides.scss
@@ -91,7 +91,7 @@ input.mainsearch::placeholder {
 .filtre-div{
     font-family: 'Lato', sans-serif;
     font-size: 18px;
-    font-weight: 700, bold;
+    font-weight: 700;
     width: 100%;
 }
 
